`emoji-picker`: Fix some positioning issues (#3626)
* positioning on emoji picker

* Format code

* Fix spacing more

* Format code

* Move offscreen positioning to userstyle

* Move onscreen positioning into userstyle too

i just needed to use top lol

* Format code

--- a/addons/emoji-picker/userstyle.css
+++ b/addons/emoji-picker/userstyle.css
@@ -14,12 +14,23 @@
   line-height: 0px;
   font-size: 15px;
 }
-.sa-emoji-button-www .sa-emoji-picker {
+.sa-emoji-picker {
   right: -7px;
 }
-.sa-emoji-button-r2 .sa-emoji-picker {
-  left: -10px;
+
+.sa-emoji-button-r2 .sa-emoji-picker:not(.sa-emoji-picker-offscreen) {
+  top: 33px;
 }
+.sa-emoji-button-www .sa-emoji-picker:not(.sa-emoji-picker-offscreen) {
+  top: calc(11rem + 5px);
+}
+.sa-emoji-button-r2 .sa-emoji-picker.sa-emoji-picker-offscreen {
+  bottom: 35px;
+}
+.sa-emoji-button-www .sa-emoji-picker.sa-emoji-picker-offscreen {
+  bottom: 52px;
+}
+
 .sa-emoji-picker-item {
   cursor: pointer;
   width: 24px;
